Fixing pipeline